# chordspark

./: .gitignore  IMPROVEMENTS.md  README.md  app.js  build-mac.sh  build-win.bat  capacitor.config.ts  chords.js  chordspark-addendum.md  data.js  download_freesound_chords.py  fingering-mastery-module.md  generate_guitar_chords.py  index.html  main.js  package-lock.json  package.json  preload.js  spark-visual.css  stickiness-layer.md  storage.js  styles.css
.github/workflows/: build-mac.yml
content/manifests/: default.json
data/performance_charts/: demo_progression.json
desktop/: channels.js  crash.js  dialogs.js  feedback.js  logging.js  main.js  menu.js  package.json  preload.js  storage.js  updater.js
js/: app.js  audio.js  data.js  pages.js  spark-highway.js  state.js  ui.js
js/analytics/: charts.js  dashboard.js  engine.js  reports.js  stats.js  trends.js
js/audio/: calibration.js  latency.js  metronome.js  timing.js
js/career/: engine.js  registry.js  rewards.js  scoring.js  ui.js  unlocks.js
js/cloud/: api.js  auth.js  profile.js  storage.js  sync.js  ui.js
js/content/: loader.js  registry.js  validation.js
js/core/: analytics.js  contracts.js  persistence.js  progression.js
js/curriculum/: curriculum_engine.js  curriculum_loader.js  curriculum_registry.js  curriculum_ui.js
js/desktop/: bridge.js  channels.js  feedback.js
js/editor/: box_select.js  clipboard.js  drag.js  engine.js  ghost.js  (+20 more)
release/: changelog.json  manifest.json
server/: db.js  package.json  server.js
src-tauri/: Cargo.toml  tauri.conf.json
tests/: test_core.js
(+108 files in other folders)
