[package]
name = "chordspark"
version = "3.1.0"
description = "Guitar chord learning app"
authors = ["ChordSpark"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
